Patch from Evan.  Fixes #10161 - fix unobvious indication of selected rows/columns in high contrast mode
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@20745 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/enhanced/resources/EnhancedGrid.css
+++ b/grid/enhanced/resources/EnhancedGrid.css
@@ -176,3 +176,16 @@
 .dojoxGrid{
 	border:1px solid #DBDBDB;
 }
+
+.dijit_a11y .dojoxGridRowSelected{
+	opacity:0.4 !important;
+}
+
+.dijit_a11y .dojoxGridSelectedDIV{
+	opacity:0.4 !important;
+	border:3px solid #000 !important;
+}
+
+.dijit_a11y .dojoxGridBorderDIV{
+	border:2px solid #000 !important;
+}
